# tide

./: .coverage  .gitignore  AGENTS.md  README.md  coverage.xml  install-deps.bash  license.md  main.py  pyproject.toml  release-procedure.md  setup.py  zenoh_pub_example.py  zenoh_sub_example.py
.cursor/rules/: project_info.mdc
.github/workflows/: ci.yml  pypi.yaml  pypi.yml  release.yml  tests.yml
.hypothesis/constants/: 072ea6ce981a3d42  17f7eec6e4785643  1d59236407d428a7  22406b8a1de3c2dd  25063239c9e44ad4  2b491796283972eb  2bbe7698d1d16a19  3a3089fda93b0c0d  3e508fab662c85c5  5a5cbcac8d6e2c3e  5b63bf1e8b124f56  5be32ecb5329e2a0  636b9eefd9f8bb0b  695219a869c21d41  7048ba37eadc4fa9  7874b69b605ff5ee  7b080cf50167b430  7da90a30b9aa9b8d  828cac61ebace07b  84a2bac15caff8e3  87e73f79147ab759  8c3927f648220bb7  8c58b4c4730cbeb9  8e248600bd23e5b5  92ecabb82b3d84dc  978311cc40871a2d  992aa2b74a39813d  9d0166766a1fc0de  a3b461f7e0086dc3  a5c59094453ff161  a99157c9f7518ec0  c04bd3acd62337de  c29f3dfa1277c4c6  cfcbc51673a6e66b  d01fa2aacc8da587  d09c35f0cf700697  d6e306a75c93de5e  e9ca84059006a7ee  feb5ba9530d9ad8c
docs/: behavior_tree_node.md  cli.md  config_spec.md  first_project.md  geometry.md  motors.md  mux_node.md  namespacing.md  pid_node.md  pose_estimator.md  rerun_node.md  webcam_node.md
models/: __init__.py  robot.py
tests/: README.md  conftest.py
tests/test_cli/: test_cli.py
tests/test_components/: test_behavior_tree_node.py  (+3 more)
tide/: __init__.py  namespaces.py
tide.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+64 files in other folders)
